--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -25,15 +25,17 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.depend.0=jedit 04.05.99.00
 # plugin menu - a list of actions or separators
 plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.check-errors \
   SUMOjEditPlugin.format-select \
-  SUMOjEditPlugin.goto-defn
+  SUMOjEditPlugin.goto-defn \
+  SUMOjEditPlugin.browse-term
 
 # action labels for actions supplied by dockables.xml
 SUMOjEditPlugin.label=SUMOjEditPlugin
 
 # action labels for actions supplied by actions.xml
-SUMOjEditPlugin.check-errors.label=Check for KIF syntax errors
+SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
+SUMOjEditPlugin.browse-term=browse term in Sigma
 
 # plugin option pane
 plugin.SUMOjEditPlugin.option-pane=SUMOjEditPlugin
