--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -26,7 +26,8 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.depend.0=jedit 04.05.99.00
 plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.check-errors \
   SUMOjEditPlugin.format-select \
   SUMOjEditPlugin.goto-defn \
-  SUMOjEditPlugin.browse-term
+  SUMOjEditPlugin.browse-term \
+  SUMOjEditPlugin.query-exp
 
 # action labels for actions supplied by dockables.xml
 SUMOjEditPlugin.label=SUMOjEditPlugin
@@ -36,6 +37,7 @@ SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
 SUMOjEditPlugin.browse-term=browse term in Sigma
+SUMOjEditPlugin.query-exp=query on highlighted expression
 
 # plugin option pane
 plugin.SUMOjEditPlugin.option-pane=SUMOjEditPlugin
