--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -36,8 +36,8 @@ SUMOjEditPlugin.label=SUMOjEditPlugin
 SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
-SUMOjEditPlugin.browse-term=browse term in Sigma
-SUMOjEditPlugin.query-exp=query on highlighted expression
+SUMOjEditPlugin.browse-term.label=browse term in Sigma
+SUMOjEditPlugin.query-exp.label=query on highlighted expression
 
 # plugin option pane
 plugin.SUMOjEditPlugin.option-pane=SUMOjEditPlugin
