--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -27,6 +27,8 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.check-err
   SUMOjEditPlugin.format-select \
   SUMOjEditPlugin.goto-defn \
   SUMOjEditPlugin.browse-term \
+  SUMOjEditPlugin.chooseVamp \
+  SUMOjEditPlugin.chooseE \
   SUMOjEditPlugin.query-exp
 
 # action labels for actions supplied by dockables.xml
@@ -37,6 +39,8 @@ SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
 SUMOjEditPlugin.browse-term.label=browse term in Sigma
+SUMOjEditPlugin.chooseVamp.label=select Vampire
+SUMOjEditPlugin.chooseE.label=select EProver
 SUMOjEditPlugin.query-exp.label=query on highlighted expression
 
 # plugin option pane
