--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -23,7 +23,8 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.docs=index.html
 plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.depend.0=jedit 04.05.99.00
 
 # plugin menu - a list of actions or separators
-plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.check-errors \
+plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.show-stats \
+  SUMOjEditPlugin.check-errors \
   SUMOjEditPlugin.format-select \
   SUMOjEditPlugin.goto-defn \
   SUMOjEditPlugin.browse-term \
@@ -37,6 +38,7 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=SUMOjEditPlugin.check-err
 SUMOjEditPlugin.label=SUMOjEditPlugin
 
 # action labels for actions supplied by actions.xml
+SUMOjEditPlugin.show-stats.label=Show statistics for buffer
 SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
