--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -45,8 +45,8 @@ SUMOjEditPlugin.check-errors.label=Check for SUO-KIF errors
 SUMOjEditPlugin.format-select.label=format axioms
 SUMOjEditPlugin.goto-defn.label=go to definition
 SUMOjEditPlugin.browse-term.label=browse term in Sigma
-SUMOjEditPlugin.setFOF.label=select TFF language
-SUMOjEditPlugin.setTFF.label=select FOF language
+SUMOjEditPlugin.setFOF.label=select FOF language
+SUMOjEditPlugin.setTFF.label=select TFF language
 SUMOjEditPlugin.chooseVamp.label=select Vampire
 SUMOjEditPlugin.chooseE.label=select EProver
 SUMOjEditPlugin.query-exp.label=query on highlighted expression
