--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
         <delete includeemptydirs="true" failonerror="false">
             <fileset dir="build"/>
         </delete>
+        <delete file="SUMOjEdit.jar"/>
     </target>
 
     <target name="init" depends="clean">
@@ -16,15 +17,15 @@
         <property name="jedit.home" value="${env.JEDIT_HOME}"/>
         <property name="git.home" value="${env.ONTOLOGYPORTAL_GIT}"/>
         <property name="tptp.home" value="${git.home}/TPTP-ANTLR"/>
-        <echo message="JEDIT_HOME is set to = ${env.JEDIT_HOME}"/>
+        <echo message="JEDIT_HOME is set to = ${jedit.home}"/>
     </target>
 
     <target name="TPTP" depends="init">
         <echo message="SIGMA_HOME is set to = ${env.SIGMA_HOME}"/>
         <echo message="TPTP is set to = ${tptp.home}"/>
-        <ant antfile="${tptp.home}/build.xml" inheritAll="false" target="all" />
+        <!--<ant antfile="${tptp.home}/build.xml" inheritAll="false" target="all" />-->
         <copy todir="${basedir}/lib" file="${tptp.home}/tptp.jar" />
-        <ant antfile="../SigmaUtils/build.xml" inheritAll="false" target="all" />
+        <!--<ant antfile="../SigmaUtils/build.xml" inheritAll="false" target="all" />-->
         <copy todir="${basedir}/lib" file="../SigmaUtils/sigmaUtils.jar" />
     </target>
 
@@ -33,9 +34,9 @@
         <javac destdir="build" debug="on" optimize="on" deprecation="on" includeantruntime="false" classpathref="compile.classpath">
             <src refid="core.sourcepath"/>
         </javac>
-        <copy todir="build/lib">
+<!--        <copy todir="build/lib">
             <fileset dir="lib" />
-        </copy>
+        </copy>-->
         <copy todir="build" file="config/SUMOjEdit.props" />
         <!-- copy todir="build" file="config/dockables.xml" /-->
         <copy todir="build" file="config/actions.xml" />
@@ -44,7 +45,7 @@
     <target name="dist" depends="compile" description="Create the *.war file and place in build.">
         <jar destfile="SUMOjEdit.jar">
             <fileset dir="build"/>
-            <fileset dir="build/lib"/>
+            <!--<fileset dir="build/lib"/>-->
         </jar>
     </target>
 
@@ -52,7 +53,8 @@
         <copy todir="${jedit.home}/jars" file="SUMOjEdit.jar" />
         <copy todir="${jedit.home}/jars">
             <fileset dir="lib">
-                <exclude name="jedit.jar" />
+                <exclude name="jedit.jar"/>
+                <exclude name="ErrorList.jar"/>
                 <!-- # including the jedit.jar in .jedit/jars causes strange problems -->
             </fileset>
         </copy>
