--- a/nbproject/build.properties
+++ b/nbproject/build.properties
@@ -75,10 +75,14 @@ test.unit.dir=${file.reference.unit-java}
 # Specific SUMOjEdit props
 app.name=SUMOjEdit
 main.class=com.articulate.sigma.jedit.${app.name}
-run.args=-q
 ontologyportal.git=${workspace}
 sigma_src=../sigmakee
 sigma_home=${user.home}/.sigmakee
+catalina.base=${catalina.home}
+activity.log=${jedit.home}/activity.log
+
+# Various runtime arguments here
+run.args=
 
 impl.title=${app.name}
 impl.vendor.id=edu.nps.cs
