--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 /nbproject/private/
 /dist/
 /MANIFEST.MF
+/lib/antlr4-runtime-4.9.3.jar
+/lib/guava-19.0.jar
+/lib/objenesis-3.4.jar
+/lib/minlog-1.3.1.jar
+/lib/kryo-5.6.2.jar
+/lib/reflectasm-1.11.9.jar
+/lib/java-prolog-parser-2.0.2.jar
+/.ivy/
