--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,68 @@
-<project name="QuickNotepad" default="all">
+<project xmlns:ivy="antlib:org.apache.ivy.ant"
+         name="QuickNotepad" default="all" basedir=".">
     <description>
         This is an ant build.xml file for building the SUMOjEdit plugin for jEdit.
     </description>
 
+    <property name="ivy.install.version" value="2.5.1"/>
+    <property name="ivy.home" value="${basedir}/.ivy"/>
+    <property name="ivy.jar.dir" value="${ivy.home}/lib"/>
+    <property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar"/>
+
     <property name="javac.release" value="11"/>
 
-    <target name="clean">
+    <target name="check.for.ivy.jar">
+        <available file="${ivy.jar.file}" property="ivy.present"/>
+    </target>
+
+    <target name="download-ivy" depends="check.for.ivy.jar" unless="ivy.present">
+        <mkdir dir="${ivy.jar.dir}"/>
+        <!-- download Ivy from web site so that it can be used even without any special installation -->
+        <get src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+             dest="${ivy.jar.file}" usetimestamp="true"/>
+    </target>
+
+    <target name="init-ivy" depends="download-ivy">
+        <!-- try to load Ivy here from Ivy home, in case the user has not already dropped
+                it into Ant's lib dir (note that the latter copy will always take precedence).
+                We will not fail as long as local lib dir exists (it may be empty) and
+                Ivy is in at least one of Ant's lib dir or the local lib dir. -->
+        <path id="ivy.lib.path">
+            <fileset dir="${ivy.jar.dir}" includes="*.jar"/>
+        </path>
+        <taskdef resource="org/apache/ivy/ant/antlib.xml"
+                 uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
+        <ivy:retrieve/>
+
+        <path id="compile.classpath">
+            <fileset dir="lib">
+                <include name="*.jar"/>
+            </fileset>
+        </path>
+    </target>
+
+    <target name="clean" depends="init-ivy">
         <delete includeemptydirs="true" failonerror="false">
             <fileset dir="build"/>
         </delete>
         <delete file="SUMOjEdit.jar"/>
+
+        <!-- for dep updates, clean ${jedit.home}/jars -->
+        <delete>
+            <fileset dir="${jedit.home}/jars">
+                <include name="antlr4*"/>
+                <include name="guava*"/>
+                <include name="java-prolog*"/>
+                <include name="kryo*"/>
+                <include name="minlog*"/>
+                <include name="objenesis*"/>
+                <include name="reflectasm*"/>
+                <include name="sigmaUtils*"/>
+                <include name="sigmakee*"/>
+                <include name="SUMOjEdit*"/>
+                <include name="tptp*"/>
+            </fileset>
+        </delete>
     </target>
 
     <target name="init" depends="clean">
@@ -75,9 +128,4 @@
         <pathelement path="src"/>
     </path>
 
-    <path id="compile.classpath">
-        <fileset dir="lib">
-            <include name="*.jar"/>
-        </fileset>
-    </path>
 </project>
