[Terry N.] correct tptp home for NetBeans

--- a/nbproject/build.properties
+++ b/nbproject/build.properties
@@ -78,6 +78,7 @@ main.class=com.articulate.sigma.jedit.${app.name}
 ontologyportal.git=${workspace}
 sigma_src=../sigmakee
 sigma_home=${user.home}/.sigmakee
+tptp_home=${workspace}/TPTP-ANTLR
 catalina.base=${catalina.home}
 activity.log=${jedit.home}/activity.log
 
