--- a/nbproject/build.properties
+++ b/nbproject/build.properties
@@ -28,8 +28,9 @@ file.reference.src-java=src
 file.reference.unit-java=test/unit/java
 includes=**
 jar.compress=false
-# Leverage Ivy here
-javac.classpath=${ant.refid:compile.classpath}
+javac.classpath=\
+    lib/ErrorList.jar:\
+    lib/jedit.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +57,14 @@ manifest.mf=MANIFEST.MF
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    lib/guava-19.0.jar:\
+    lib/kryo-5.6.2.jar:\
+    lib/minlog-1.3.1.jar:\
+    lib/objenesis-3.4.jar:\
+    lib/reflectasm-1.11.9.jar:\
+    lib/sigmaUtils.jar:\
+    lib/sigmakee.jar
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
@@ -83,7 +91,7 @@ catalina.base=${catalina.home}
 activity.log=${jedit.home}/activity.log
 
 # Various runtime arguments here
-run.args=
+run.args=-d ${user.home}/javaapis/INSAFE/doc/course/Course.kif
 
 impl.title=${app.name}
 impl.vendor.id=edu.nps.cs
