[Terry N.] add run task args

--- a/nbproject/build.properties
+++ b/nbproject/build.properties
@@ -91,7 +91,8 @@ catalina.base=${catalina.home}
 activity.log=${jedit.home}/activity.log
 
 # Various runtime arguments here
-run.args=-d ${user.home}/javaapis/INSAFE/doc/course/Course.kif
+#run.args=-d ${user.home}/javaapis/INSAFE/doc/course/Course.kif
+run.args=
 
 impl.title=${app.name}
 impl.vendor.id=edu.nps.cs
