[Terry N.] run jedit w/ no args

--- a/nbproject/build.properties
+++ b/nbproject/build.properties
@@ -93,9 +93,11 @@ catalina.base=${catalina.home}
 activity.log=${jedit.home}/activity.log
 
 # Various runtime arguments here
+# run.jedit w/ no args
+run.args=
 #run.args=-d ${user.home}/javaapis/INSAFE/doc/course/Course.kif
 # Run a default query (routeBetween ?X MenloParkCA MountainViewCA)
-run.args=-q
+#run.args=-q
 
 impl.title=${app.name}
 impl.vendor.id=edu.nps.cs
