--- a/build.xml
+++ b/build.xml
@@ -117,6 +117,8 @@
         <copy todir="${jedit.home}/jars" file="SUMOjEdit.jar" />
         <copy todir="${jedit.home}/jars">
             <fileset dir="lib">
+                <exclude name="hamcrest-core-1.3.jar"/>
+                <exclude name="junit-4.13.2.jar"/>
                 <exclude name="jedit.jar"/>
                 <!-- including the jedit.jar in .jedit/jars causes strange problems -->
             </fileset>
