--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 /build/
 /.idea/
 /SUMOjEdit.jar
@@ -15,3 +16,5 @@
 /lib/reflectasm-1.11.9.jar
 /lib/java-prolog-parser-2.0.2.jar
 /.ivy/
+/lib/hamcrest-core-1.3.jar
+/lib/junit-4.13.2.jar
