[Terry N.] expand to unit and integration tests

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,12 @@
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
-build.home=build
+#build.home=build
 build.classes.dir=${build.home}/classes
-build.test.classes.dir=${build.home}/test/classes
-build.test.results.dir=${build.test.classes.dir}/results
+#build.test.classes.dir=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 buildfile=nbproject/ide-targets.xml
+ant.script=${buildfile}
 # Uncomment to specify the preferred debugger connection transport:
 debug.transport=dt_socket
 debug.classpath=\
@@ -29,8 +29,15 @@ file.reference.unit-java=test/unit/java
 includes=**
 jar.compress=false
 javac.classpath=\
+    lib/antlr4-runtime-4.9.3.jar:\
     lib/ErrorList.jar:\
-    lib/jedit.jar
+    lib/guava-19.0.jar:\
+    lib/java-prolog-parser-2.0.2.jar:\
+    lib/jedit.jar:\
+    lib/kryo-5.6.2.jar:\
+    lib/sigmakee.jar:\
+    lib/sigmaUtils.jar:\
+    lib/tptp.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,35 +65,32 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    lib/guava-19.0.jar:\
-    lib/java-prolog-parser-2.0.2.jar:\
-    lib/kryo-5.6.2.jar:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
-    lib/reflectasm-1.11.9.jar:\
-    lib/sigmaUtils.jar:\
-    lib/sigmakee.jar:\
-    lib/tptp.jar
+    lib/reflectasm-1.11.9.jar
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Xmx10g -Xss1m
+#run.jvmargs=-Xmx10g -Xss1m
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    lib/minlog-1.3.1.jar:\
+    lib/objenesis-3.4.jar:\
+    lib/reflectasm-1.11.9.jar
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=${file.reference.src-java}
-test.unit.dir=${file.reference.unit-java}
+#test.unit.dir=${file.reference.unit-java}
 
 # Specific SUMOjEdit props
 app.name=SUMOjEdit
 main.class=com.articulate.sigma.jedit.${app.name}
 ontologyportal.git=${workspace}
-sigma_src=../sigmakee
+sigma_src=${workspace}/sigmakee
 sigma_home=${user.home}/.sigmakee
 tptp_home=${workspace}/TPTP-ANTLR
 catalina.base=${catalina.home}
@@ -114,6 +118,6 @@ product.Version=${product.version.major}.${product.version.minor}.\
 spec.vendor=Adam Pease
 project.license=LICENSE
 
-reports.dir=${build.home}/reports
-report.html=file:${basedir}/${reports.dir}/html/index.html
-unit.test.suite=com.articulate.sigma.StringUtilTest
+#reports.dir=${build.home}/reports
+#report.html=file:${basedir}/${reports.dir}/html/index.html
+#unit.test.suite=com.articulate.sigma.jedit.UnitTestSuite
