--- a/build.xml
+++ b/build.xml
@@ -86,9 +86,11 @@
     </target>
 
     <target name="init" depends="init-ivy">
-        <!-- Builds the SigmaUtils and TPTP jars as part of SigmaKee's init -->
+        <!-- Builds the SigmaUtils and TPTP jars as part of SigmaKEE's init -->
         <ant antfile="../sigmakee/build.xml" inheritAll="false" target="all" />
         <copy todir="lib" file="../sigmakee/build/sigmakee.jar" />
+        <ant antfile="../sigmaAntlr/build.xml" inheritAll="false" target="all" />
+        <copy todir="lib" file="../sigmaAntlr/sigmaAntlr.jar" />
         <echo message="JEDIT_HOME is set to = ${jedit.home}"/>
     </target>
 
