[Terry N.] add deps

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -95,6 +95,7 @@ sigma_home=${user.home}/.sigmakee
 tptp_home=${workspace}/TPTP-ANTLR
 catalina.base=${catalina.home}
 activity.log=${jedit.home}/activity.log
+sigma_antlr_src=${workspace}/sigmaAntlr
 
 # Various runtime arguments here
 # run.jedit w/ no args
