--- a/build.xml
+++ b/build.xml
@@ -87,9 +87,8 @@
 
     <target name="init" depends="init-ivy">
         <!-- Builds the SigmaUtils and TPTP jars as part of SigmaKEE's init -->
-        <ant antfile="../sigmakee/build.xml" inheritAll="false" target="all" />
-        <copy todir="lib" file="../sigmakee/build/sigmakee.jar" />
         <ant antfile="../sigmaAntlr/build.xml" inheritAll="false" target="all" />
+        <copy todir="lib" file="../sigmakee/build/sigmakee.jar" />
         <copy todir="lib" file="../sigmaAntlr/sigmaAntlr.jar" />
         <echo message="JEDIT_HOME is set to = ${jedit.home}"/>
     </target>
@@ -143,7 +142,7 @@
 
     <target name="clean">
         <delete includeemptydirs="true" failonerror="false">
-            <fileset dir="build"/>
+            <fileset dir="${build.home}"/>
         </delete>
         <delete file="SUMOjEdit.jar"/>
 
