[Terry N.] add sigmaAntlr deploy

--- a/build.xml
+++ b/build.xml
@@ -156,9 +156,25 @@
                 <include name="minlog*"/>
                 <include name="objenesis*"/>
                 <include name="reflectasm*"/>
+                <include name="sigmaAntlr*"/>
                 <include name="sigmaUtils*"/>
                 <include name="sigmakee*"/>
                 <include name="SUMOjEdit*"/>
+                <include name="tptp*"/>
+            </fileset>
+            <fileset dir="lib">
+                <include name="antlr4*"/>
+                <include name="guava*"/>
+                <include name="hamcrest-*"/>
+                <include name="java-prolog*"/>
+                <include name="junit-*"/>
+                <include name="kryo*"/>
+                <include name="minlog*"/>
+                <include name="objenesis*"/>
+                <include name="reflectasm*"/>
+                <include name="sigmaAntlr*"/>
+                <include name="sigmaUtils*"/>
+                <include name="sigmakee*"/>
                 <include name="tptp*"/>
             </fileset>
         </delete>
