--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ javac.classpath=\
     lib/java-prolog-parser-2.0.2.jar:\
     lib/jedit.jar:\
     lib/kryo-5.6.2.jar:\
+    lib/sigmaAntlr.jar:\
     lib/sigmakee.jar:\
     lib/sigmaUtils.jar:\
     lib/tptp.jar
