--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
     <property name="git.home" value="${env.ONTOLOGYPORTAL_GIT}"/>
     <property name="tptp.home" value="${git.home}/TPTP-ANTLR"/>
     <property name="build.home" value="build"/>
-    <property name="build.test.classes.dir" value="${build.home}/test/classes"/>
+    <property name="build.test.classes" value="${build.home}/test/classes"/>
     <property name="unit.test.suite" value="com.articulate.sigma.UnitTestSuite"/>
     <property name="test.unit.dir" value="test/unit/java"/>
     <property name="reports.dir" value="${build.home}/reports"/>
@@ -70,13 +70,9 @@
                 <exclude name="hamcrest*"/>
             </fileset>
         </path>
-        <path id="runtime.classpath">
+        <path id="compile.test.classpath">
             <path refid="compile.classpath"/>
             <pathelement location="${build.home}/classes"/>
-        </path>
-        <path id="compile.test.classpath">
-            <path refid="runtime.classpath"/>
-            <pathelement location="${build.test.classes.dir}"/>
             <pathelement path="lib/hamcrest-core-1.3.jar:lib/junit-4.13.2.jar"/>
         </path>
         <path id="run.test.classpath">
@@ -116,8 +112,8 @@
     </target>
 
     <target name="compile.test" depends="compile">
-        <mkdir dir="${build.test.classes.dir}"/>
-        <javac destdir="${build.test.classes.dir}"
+        <mkdir dir="${build.test.classes}"/>
+        <javac destdir="${build.test.classes}"
                debug="on"
                optimize="on"
                deprecation="on"
