--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ src.dir=${file.reference.src-java}
 #test.unit.dir=${file.reference.unit-java}
 
 # Specific SUMOjEdit props
-app.name=SUMOjEdit
+#app.name=SUMOjEdit
 main.class=com.articulate.sigma.jedit.${app.name}
 ontologyportal.git=${workspace}
 sigma_src=${workspace}/sigmakee
