--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -20,8 +20,10 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.jars=\
     minlog-1.3.1.jar \
     objenesis-3.4.jar \
     reflectasm-1.11.9.jar \
+    sigmaAntlr.jar \
     sigmaUtils.jar \
     sigmakee.jar \
+    tomcat-servlet-api-9.0.97.jar \
     tptp.jar
 
 # online help
